* V1.8.2dev
  * fixed bug in 'remove_action' in CK kernel
  * fixed issue in "run_and_get_stdout" on Windows
  * printing module UOA in square brackets when error (useful for debugging)
  * added 'shell' parameter to kernel 'run_and_get_stdout' function
    (needed for ck-crowdnode)

* V1.8.1
  * added continuous integration via Travis (Linux) and AppVeyor (Windows)
  * added CoverAlls to measure test coverage
  * added possibility to skip listing of all modules from private repositories
  * fixed error in 'ck edit'
  * unitests added (we now support Python 2.7 and 3.3+)
  * added 'dump_json' instead of 'dumps_json'

* V1.7.4
  * extended run_and_get_stdout kernel function 
  * fixed problem in run_and_get_stdout (ValueError: I/O operation on closed file)
  * fixed problem with --help or --get_api from kernel

* V1.7.3
  * fixed rare bug when 'return' is non-integer in remote CK access (such as during crowd-tuning and crowd-testing)
  * fixed copying to clipboard on Windows
  * fixed __init__.py when using CK from scripts/ipython/jupyter (calling init())
  * added ck.jerr(r) - print error with raise KeyboardInterrupt for Jupyter Notebooks
  * fixed major problem with using CK without CK_ROOT env, i.e. from python scripts or Jupyter Notebooks
  * fixed minor problem with CK_ROOT env (when is not set but can be detected automatically)
  * added run_and_get_stdout function and fixed various problems with crowdtuning on MacOS 

* V1.7.2
  * added the --wfe_host and --wfe_host flags to "ck start web".
  * improved API when starting CK server and a browser at the same time ...
  * added info about Docker support in CK
  * simplified adding remote repo using --hostname --port --hostext
  * added possibility to describe repository for Artifact Evaluation
    using flag --describe (see http://cTuning.org/ae), i.e.
    ck add repo:my-artifact-pack --describe
  * return 16 when adding new entry (including repository) and it already exists