@@ -4,6 +4,8 @@
   * printing module UOA in square brackets when error (useful for debugging)
   * added 'shell' parameter to kernel 'run_and_get_stdout' function
     (needed for ck-crowdnode)
+  * added 'eout' function to kernel to print to stderr
+    (useful for ck-crowdnode-server)
 
 * V1.8.1
   * added continuous integration via Travis (Linux) and AppVeyor (Windows)
